# kabu-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/: default.example.json  us.example.json
docs/: GO_LIVE.md  IBKR_OAUTH_SETUP.md
kabu_trader/: __init__.py  backtester.py  cli.py  corporate_actions.py  data_fetcher.py  earnings_tracker.py  email_notifier.py  indicators.py  llm_sentiment.py  market_data.py  ml_features.py  ml_model.py  monitor.py  news_fetcher.py  notifier.py  paper_trader.py  rate_limit.py  sector_groups.py  strategy.py
kabu_trader/brokers/: __init__.py  ibkr.py  ibkr_webapi.py
models/: default_meta.json
scripts/: install_perf_report_cron.sh  install_taskai_cron.sh  optimize_weights.py  perf_report.py  push_taskai.py  setup-server.sh  update_jp_watchlist.py  update_us_watchlist.py
